// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`projectType: 'FEDERATION' | model: 'legacy' | json: false > can publish a schema with breaking, warning and safe changes > SchemaPublish 1`] = `
:::::::::::::::: CLI SUCCESS OUTPUT :::::::::::::::::

stdout--------------------------------------------:
✔ Published initial schema.
ℹ Available at http://__PATH__
`;

exports[`projectType: 'FEDERATION' | model: 'legacy' | json: false > can publish a schema with breaking, warning and safe changes > schemaCheck 1`] = `
:::::::::::::::: CLI FAILURE OUTPUT :::::::::::::::
exitCode------------------------------------------:
1
stderr--------------------------------------------:
__NONE__
stdout--------------------------------------------:
✖ Detected 1 error

   - Field email was removed from object type User

ℹ Detected 4 changes

   Breaking changes:
   - Field email was removed from object type User
   Safe changes:
   - Enum value VIEWER was added to enum UserRole
   - Field address was added to object type User
   - Field User.role changed type from UserRole to UserRole!

View full report:
http://__PATH__
`;

exports[`projectType: 'FEDERATION' | model: 'legacy' | json: false > can publish and check a schema with target:registry:read access > schemaCheck (breaking) 1`] = `
:::::::::::::::: CLI FAILURE OUTPUT :::::::::::::::
exitCode------------------------------------------:
1
stderr--------------------------------------------:
__NONE__
stdout--------------------------------------------:
✖ Detected 1 error

   - Field email was removed from object type User

ℹ Detected 1 change

   Breaking changes:
   - Field email was removed from object type User

View full report:
http://__PATH__
`;

exports[`projectType: 'FEDERATION' | model: 'legacy' | json: false > can publish and check a schema with target:registry:read access > schemaCheck (non-breaking) 1`] = `
:::::::::::::::: CLI SUCCESS OUTPUT :::::::::::::::::

stdout--------------------------------------------:
ℹ Detected 1 change

   Safe changes:
   - Field nickname was added to object type User

View full report:
http://__PATH__
`;

exports[`projectType: 'FEDERATION' | model: 'legacy' | json: false > can publish and check a schema with target:registry:read access > schemaPublish 1`] = `
:::::::::::::::: CLI SUCCESS OUTPUT :::::::::::::::::

stdout--------------------------------------------:
✔ Published initial schema.
ℹ Available at http://__PATH__
`;

exports[`projectType: 'FEDERATION' | model: 'legacy' | json: false > can update the service url and show it in comparison query > schemaPublish 1`] = `
:::::::::::::::: CLI SUCCESS OUTPUT :::::::::::::::::

stdout--------------------------------------------:
✔ Published initial schema.
ℹ Available at http://__PATH__
`;

exports[`projectType: 'FEDERATION' | model: 'legacy' | json: false > can update the service url and show it in comparison query > schemaPublish 2`] = `
:::::::::::::::: CLI SUCCESS OUTPUT :::::::::::::::::

stdout--------------------------------------------:
✔ New service url: http://__PATH__ (previously: http://__PATH__ Available at http://__PATH__
`;

exports[`projectType: 'FEDERATION' | model: 'legacy' | json: false > publishing invalid schema SDL provides meaningful feedback for the user. > schemaPublish 1`] = `
:::::::::::::::: CLI FAILURE OUTPUT :::::::::::::::
exitCode------------------------------------------:
2
stderr--------------------------------------------:
    Error: The SDL is not valid at line 1, column 1:
     Syntax Error: Unexpected Name "iliketurtles".
stdout--------------------------------------------:
✖ Failed to publish schema
`;

exports[`projectType: 'FEDERATION' | model: 'legacy' | json: false > schema:check should notify user when registry is empty > schemaCheck 1`] = `
:::::::::::::::: CLI SUCCESS OUTPUT :::::::::::::::::

stdout--------------------------------------------:
✔ Schema registry is empty, nothing to compare your schema with.
View full report:
http://__PATH__
`;

exports[`projectType: 'FEDERATION' | model: 'legacy' | json: false > schema:check should throw on corrupted schema > schemaCheck 1`] = `
:::::::::::::::: CLI FAILURE OUTPUT :::::::::::::::
exitCode------------------------------------------:
1
stderr--------------------------------------------:
__NONE__
stdout--------------------------------------------:
✖ Detected 3 errors

   - Unknown type: User.
   - Unknown type User.
   - Type Query must define one or more fields.

View full report:
http://__PATH__
`;

exports[`projectType: 'FEDERATION' | model: 'legacy' | json: false > schema:publish should see Invalid Token error when token is invalid > schemaPublish 1`] = `
:::::::::::::::: CLI FAILURE OUTPUT :::::::::::::::
exitCode------------------------------------------:
2
stderr--------------------------------------------:
 ›   Error: Invalid token provided
 ›   Reference: __ID__
stdout--------------------------------------------:
✖ Failed to publish schema
`;

exports[`projectType: 'FEDERATION' | model: 'modern' | json: false > can publish a schema with breaking, warning and safe changes > SchemaPublish 1`] = `
:::::::::::::::: CLI SUCCESS OUTPUT :::::::::::::::::

stdout--------------------------------------------:
✔ Published initial schema.
ℹ Available at http://__PATH__
`;

exports[`projectType: 'FEDERATION' | model: 'modern' | json: false > can publish a schema with breaking, warning and safe changes > schemaCheck 1`] = `
:::::::::::::::: CLI FAILURE OUTPUT :::::::::::::::
exitCode------------------------------------------:
1
stderr--------------------------------------------:
__NONE__
stdout--------------------------------------------:
✖ Detected 1 error

   - Field email was removed from object type User

ℹ Detected 4 changes

   Breaking changes:
   - Field email was removed from object type User
   Safe changes:
   - Enum value VIEWER was added to enum UserRole
   - Field address was added to object type User
   - Field User.role changed type from UserRole to UserRole!

View full report:
http://__PATH__
`;

exports[`projectType: 'FEDERATION' | model: 'modern' | json: false > can publish and check a schema with target:registry:read access > schemaCheck (breaking) 1`] = `
:::::::::::::::: CLI FAILURE OUTPUT :::::::::::::::
exitCode------------------------------------------:
1
stderr--------------------------------------------:
__NONE__
stdout--------------------------------------------:
✖ Detected 1 error

   - Field email was removed from object type User

ℹ Detected 1 change

   Breaking changes:
   - Field email was removed from object type User

View full report:
http://__PATH__
`;

exports[`projectType: 'FEDERATION' | model: 'modern' | json: false > can publish and check a schema with target:registry:read access > schemaCheck (non-breaking) 1`] = `
:::::::::::::::: CLI SUCCESS OUTPUT :::::::::::::::::

stdout--------------------------------------------:
ℹ Detected 1 change

   Safe changes:
   - Field nickname was added to object type User

View full report:
http://__PATH__
`;

exports[`projectType: 'FEDERATION' | model: 'modern' | json: false > can publish and check a schema with target:registry:read access > schemaPublish 1`] = `
:::::::::::::::: CLI SUCCESS OUTPUT :::::::::::::::::

stdout--------------------------------------------:
✔ Published initial schema.
ℹ Available at http://__PATH__
`;

exports[`projectType: 'FEDERATION' | model: 'modern' | json: false > can update the service url and show it in comparison query > schemaPublish 1`] = `
:::::::::::::::: CLI SUCCESS OUTPUT :::::::::::::::::

stdout--------------------------------------------:
✔ Published initial schema.
ℹ Available at http://__PATH__
`;

exports[`projectType: 'FEDERATION' | model: 'modern' | json: false > can update the service url and show it in comparison query > schemaPublish 2`] = `
:::::::::::::::: CLI SUCCESS OUTPUT :::::::::::::::::

stdout--------------------------------------------:
✔ New service url: http://__PATH__ (previously: http://__PATH__ Available at http://__PATH__
`;

exports[`projectType: 'FEDERATION' | model: 'modern' | json: false > publishing invalid schema SDL provides meaningful feedback for the user. > schemaPublish 1`] = `
:::::::::::::::: CLI FAILURE OUTPUT :::::::::::::::
exitCode------------------------------------------:
2
stderr--------------------------------------------:
    Error: The SDL is not valid at line 1, column 1:
     Syntax Error: Unexpected Name "iliketurtles".
stdout--------------------------------------------:
✖ Failed to publish schema
`;

exports[`projectType: 'FEDERATION' | model: 'modern' | json: false > schema:check should notify user when registry is empty > schemaCheck 1`] = `
:::::::::::::::: CLI SUCCESS OUTPUT :::::::::::::::::

stdout--------------------------------------------:
✔ Schema registry is empty, nothing to compare your schema with.
View full report:
http://__PATH__
`;

exports[`projectType: 'FEDERATION' | model: 'modern' | json: false > schema:check should throw on corrupted schema > schemaCheck 1`] = `
:::::::::::::::: CLI FAILURE OUTPUT :::::::::::::::
exitCode------------------------------------------:
1
stderr--------------------------------------------:
__NONE__
stdout--------------------------------------------:
✖ Detected 1 error

   - [test] Unknown type User

View full report:
http://__PATH__
`;

exports[`projectType: 'FEDERATION' | model: 'modern' | json: false > schema:publish should see Invalid Token error when token is invalid > schemaPublish 1`] = `
:::::::::::::::: CLI FAILURE OUTPUT :::::::::::::::
exitCode------------------------------------------:
2
stderr--------------------------------------------:
 ›   Error: Invalid token provided
 ›   Reference: __ID__
stdout--------------------------------------------:
✖ Failed to publish schema
`;

exports[`projectType: 'SINGLE' | model: 'legacy' | json: false > can publish a schema with breaking, warning and safe changes > SchemaPublish 1`] = `
:::::::::::::::: CLI SUCCESS OUTPUT :::::::::::::::::

stdout--------------------------------------------:
✔ Published initial schema.
ℹ Available at http://__PATH__
`;

exports[`projectType: 'SINGLE' | model: 'legacy' | json: false > can publish a schema with breaking, warning and safe changes > schemaCheck 1`] = `
:::::::::::::::: CLI FAILURE OUTPUT :::::::::::::::
exitCode------------------------------------------:
1
stderr--------------------------------------------:
__NONE__
stdout--------------------------------------------:
✖ Detected 1 error

   - Field email was removed from object type User

ℹ Detected 4 changes

   Breaking changes:
   - Field email was removed from object type User
   Safe changes:
   - Enum value VIEWER was added to enum UserRole
   - Field address was added to object type User
   - Field User.role changed type from UserRole to UserRole!

View full report:
http://__PATH__
`;

exports[`projectType: 'SINGLE' | model: 'legacy' | json: false > can publish and check a schema with target:registry:read access > schemaCheck (breaking) 1`] = `
:::::::::::::::: CLI FAILURE OUTPUT :::::::::::::::
exitCode------------------------------------------:
1
stderr--------------------------------------------:
__NONE__
stdout--------------------------------------------:
✖ Detected 1 error

   - Field email was removed from object type User

ℹ Detected 1 change

   Breaking changes:
   - Field email was removed from object type User

View full report:
http://__PATH__
`;

exports[`projectType: 'SINGLE' | model: 'legacy' | json: false > can publish and check a schema with target:registry:read access > schemaCheck (non-breaking) 1`] = `
:::::::::::::::: CLI SUCCESS OUTPUT :::::::::::::::::

stdout--------------------------------------------:
ℹ Detected 1 change

   Safe changes:
   - Field nickname was added to object type User

View full report:
http://__PATH__
`;

exports[`projectType: 'SINGLE' | model: 'legacy' | json: false > can publish and check a schema with target:registry:read access > schemaPublish 1`] = `
:::::::::::::::: CLI SUCCESS OUTPUT :::::::::::::::::

stdout--------------------------------------------:
✔ Published initial schema.
ℹ Available at http://__PATH__
`;

exports[`projectType: 'SINGLE' | model: 'legacy' | json: false > publishing invalid schema SDL provides meaningful feedback for the user. > schemaPublish 1`] = `
:::::::::::::::: CLI FAILURE OUTPUT :::::::::::::::
exitCode------------------------------------------:
2
stderr--------------------------------------------:
    Error: The SDL is not valid at line 1, column 1:
     Syntax Error: Unexpected Name "iliketurtles".
stdout--------------------------------------------:
✖ Failed to publish schema
`;

exports[`projectType: 'SINGLE' | model: 'legacy' | json: false > schema:check should notify user when registry is empty > schemaCheck 1`] = `
:::::::::::::::: CLI SUCCESS OUTPUT :::::::::::::::::

stdout--------------------------------------------:
✔ Schema registry is empty, nothing to compare your schema with.
View full report:
http://__PATH__
`;

exports[`projectType: 'SINGLE' | model: 'legacy' | json: false > schema:check should throw on corrupted schema > schemaCheck 1`] = `
:::::::::::::::: CLI FAILURE OUTPUT :::::::::::::::
exitCode------------------------------------------:
1
stderr--------------------------------------------:
__NONE__
stdout--------------------------------------------:
✖ Detected 1 error

   - Unknown type User.

View full report:
http://__PATH__
`;

exports[`projectType: 'SINGLE' | model: 'legacy' | json: false > schema:publish should see Invalid Token error when token is invalid > schemaPublish 1`] = `
:::::::::::::::: CLI FAILURE OUTPUT :::::::::::::::
exitCode------------------------------------------:
2
stderr--------------------------------------------:
 ›   Error: Invalid token provided
 ›   Reference: __ID__
stdout--------------------------------------------:
✖ Failed to publish schema
`;

exports[`projectType: 'SINGLE' | model: 'modern' | json: false > can publish a schema with breaking, warning and safe changes > SchemaPublish 1`] = `
:::::::::::::::: CLI SUCCESS OUTPUT :::::::::::::::::

stdout--------------------------------------------:
✔ Published initial schema.
ℹ Available at http://__PATH__
`;

exports[`projectType: 'SINGLE' | model: 'modern' | json: false > can publish a schema with breaking, warning and safe changes > schemaCheck 1`] = `
:::::::::::::::: CLI FAILURE OUTPUT :::::::::::::::
exitCode------------------------------------------:
1
stderr--------------------------------------------:
__NONE__
stdout--------------------------------------------:
✖ Detected 1 error

   - Field email was removed from object type User

ℹ Detected 4 changes

   Breaking changes:
   - Field email was removed from object type User
   Safe changes:
   - Enum value VIEWER was added to enum UserRole
   - Field address was added to object type User
   - Field User.role changed type from UserRole to UserRole!

View full report:
http://__PATH__
`;

exports[`projectType: 'SINGLE' | model: 'modern' | json: false > can publish and check a schema with target:registry:read access > schemaCheck (breaking) 1`] = `
:::::::::::::::: CLI FAILURE OUTPUT :::::::::::::::
exitCode------------------------------------------:
1
stderr--------------------------------------------:
__NONE__
stdout--------------------------------------------:
✖ Detected 1 error

   - Field email was removed from object type User

ℹ Detected 1 change

   Breaking changes:
   - Field email was removed from object type User

View full report:
http://__PATH__
`;

exports[`projectType: 'SINGLE' | model: 'modern' | json: false > can publish and check a schema with target:registry:read access > schemaCheck (non-breaking) 1`] = `
:::::::::::::::: CLI SUCCESS OUTPUT :::::::::::::::::

stdout--------------------------------------------:
ℹ Detected 1 change

   Safe changes:
   - Field nickname was added to object type User

View full report:
http://__PATH__
`;

exports[`projectType: 'SINGLE' | model: 'modern' | json: false > can publish and check a schema with target:registry:read access > schemaPublish 1`] = `
:::::::::::::::: CLI SUCCESS OUTPUT :::::::::::::::::

stdout--------------------------------------------:
✔ Published initial schema.
ℹ Available at http://__PATH__
`;

exports[`projectType: 'SINGLE' | model: 'modern' | json: false > publishing invalid schema SDL provides meaningful feedback for the user. > schemaPublish 1`] = `
:::::::::::::::: CLI FAILURE OUTPUT :::::::::::::::
exitCode------------------------------------------:
2
stderr--------------------------------------------:
    Error: The SDL is not valid at line 1, column 1:
     Syntax Error: Unexpected Name "iliketurtles".
stdout--------------------------------------------:
✖ Failed to publish schema
`;

exports[`projectType: 'SINGLE' | model: 'modern' | json: false > schema:check should notify user when registry is empty > schemaCheck 1`] = `
:::::::::::::::: CLI SUCCESS OUTPUT :::::::::::::::::

stdout--------------------------------------------:
✔ Schema registry is empty, nothing to compare your schema with.
View full report:
http://__PATH__
`;

exports[`projectType: 'SINGLE' | model: 'modern' | json: false > schema:check should throw on corrupted schema > schemaCheck 1`] = `
:::::::::::::::: CLI FAILURE OUTPUT :::::::::::::::
exitCode------------------------------------------:
1
stderr--------------------------------------------:
__NONE__
stdout--------------------------------------------:
✖ Detected 1 error

   - Unknown type User.

View full report:
http://__PATH__
`;

exports[`projectType: 'SINGLE' | model: 'modern' | json: false > schema:publish should see Invalid Token error when token is invalid > schemaPublish 1`] = `
:::::::::::::::: CLI FAILURE OUTPUT :::::::::::::::
exitCode------------------------------------------:
2
stderr--------------------------------------------:
 ›   Error: Invalid token provided
 ›   Reference: __ID__
stdout--------------------------------------------:
✖ Failed to publish schema
`;

exports[`projectType: 'SINGLE' | model: 'modern' | json: true > can publish a schema with breaking, warning and safe changes > SchemaPublish 1`] = `
:::::::::::::::: CLI SUCCESS OUTPUT :::::::::::::::::

stdout--------------------------------------------:
{
  "ok": true,
  "message": "Command succeeded.",
  "data": {
    "__typename": "SchemaPublishSuccess",
    "changes": [],
    "url": "http://__PATH__  }
}
`;

exports[`projectType: 'SINGLE' | model: 'modern' | json: true > can publish a schema with breaking, warning and safe changes > schemaCheck 1`] = `
:::::::::::::::: CLI FAILURE OUTPUT :::::::::::::::
exitCode------------------------------------------:
1
stderr--------------------------------------------:
__NONE__
stdout--------------------------------------------:
{
  "ok": true,
  "message": "Command succeeded.",
  "data": {
    "__typename": "SchemaCheckError",
    "warnings": [],
    "changes": [
      {
        "message": "Field 'email' was removed from object type 'User'",
        "criticality": "Breaking",
        "isSafeBasedOnUsage": false,
        "approval": null
      },
      {
        "message": "Enum value 'VIEWER' was added to enum 'UserRole'",
        "criticality": "Dangerous",
        "isSafeBasedOnUsage": false,
        "approval": null
      },
      {
        "message": "Field 'address' was added to object type 'User'",
        "criticality": "Safe",
        "isSafeBasedOnUsage": false,
        "approval": null
      },
      {
        "message": "Field 'User.role' changed type from 'UserRole' to 'UserRole!'",
        "criticality": "Safe",
        "isSafeBasedOnUsage": false,
        "approval": null
      }
    ],
    "url": "http://__PATH__  }
}
`;

exports[`projectType: 'SINGLE' | model: 'modern' | json: true > can publish and check a schema with target:registry:read access > schemaCheck (breaking) 1`] = `
:::::::::::::::: CLI FAILURE OUTPUT :::::::::::::::
exitCode------------------------------------------:
1
stderr--------------------------------------------:
__NONE__
stdout--------------------------------------------:
{
  "ok": true,
  "message": "Command succeeded.",
  "data": {
    "__typename": "SchemaCheckError",
    "warnings": [],
    "changes": [
      {
        "message": "Field 'email' was removed from object type 'User'",
        "criticality": "Breaking",
        "isSafeBasedOnUsage": false,
        "approval": null
      }
    ],
    "url": "http://__PATH__  }
}
`;

exports[`projectType: 'SINGLE' | model: 'modern' | json: true > can publish and check a schema with target:registry:read access > schemaCheck (non-breaking) 1`] = `
:::::::::::::::: CLI SUCCESS OUTPUT :::::::::::::::::

stdout--------------------------------------------:
{
  "ok": true,
  "message": "Command succeeded.",
  "data": {
    "__typename": "SchemaCheckSuccess",
    "warnings": [],
    "changes": [
      {
        "message": "Field 'nickname' was added to object type 'User'",
        "criticality": "Safe",
        "isSafeBasedOnUsage": false,
        "approval": null
      }
    ],
    "url": "http://__PATH__  }
}
`;

exports[`projectType: 'SINGLE' | model: 'modern' | json: true > can publish and check a schema with target:registry:read access > schemaPublish 1`] = `
:::::::::::::::: CLI SUCCESS OUTPUT :::::::::::::::::

stdout--------------------------------------------:
{
  "ok": true,
  "message": "Command succeeded.",
  "data": {
    "__typename": "SchemaPublishSuccess",
    "changes": [],
    "url": "http://__PATH__  }
}
`;

exports[`projectType: 'SINGLE' | model: 'modern' | json: true > publishing invalid schema SDL provides meaningful feedback for the user. > schemaPublish 1`] = `
:::::::::::::::: CLI FAILURE OUTPUT :::::::::::::::
exitCode------------------------------------------:
2
stderr--------------------------------------------:
    Error: The SDL is not valid at line 1, column 1:
     Syntax Error: Unexpected Name "iliketurtles".
stdout--------------------------------------------:
__NONE__
`;

exports[`projectType: 'SINGLE' | model: 'modern' | json: true > schema:check should notify user when registry is empty > schemaCheck 1`] = `
:::::::::::::::: CLI SUCCESS OUTPUT :::::::::::::::::

stdout--------------------------------------------:
{
  "ok": true,
  "message": "Command succeeded.",
  "data": {
    "__typename": "SchemaCheckSuccess",
    "warnings": [],
    "changes": [],
    "url": "http://__PATH__  }
}
`;

exports[`projectType: 'SINGLE' | model: 'modern' | json: true > schema:check should throw on corrupted schema > schemaCheck 1`] = `
:::::::::::::::: CLI FAILURE OUTPUT :::::::::::::::
exitCode------------------------------------------:
1
stderr--------------------------------------------:
__NONE__
stdout--------------------------------------------:
{
  "ok": true,
  "message": "Command succeeded.",
  "data": {
    "__typename": "SchemaCheckError",
    "warnings": [],
    "changes": [],
    "url": "http://__PATH__  }
}
`;

exports[`projectType: 'SINGLE' | model: 'modern' | json: true > schema:publish should see Invalid Token error when token is invalid > schemaPublish 1`] = `
:::::::::::::::: CLI FAILURE OUTPUT :::::::::::::::
exitCode------------------------------------------:
2
stderr--------------------------------------------:
 ›   Error: Invalid token provided
 ›   Reference: __ID__
stdout--------------------------------------------:
__NONE__
`;

exports[`projectType: 'STITCHING' | model: 'legacy' | json: false > can publish a schema with breaking, warning and safe changes > SchemaPublish 1`] = `
:::::::::::::::: CLI SUCCESS OUTPUT :::::::::::::::::

stdout--------------------------------------------:
✔ Published initial schema.
ℹ Available at http://__PATH__
`;

exports[`projectType: 'STITCHING' | model: 'legacy' | json: false > can publish a schema with breaking, warning and safe changes > schemaCheck 1`] = `
:::::::::::::::: CLI FAILURE OUTPUT :::::::::::::::
exitCode------------------------------------------:
1
stderr--------------------------------------------:
__NONE__
stdout--------------------------------------------:
✖ Detected 1 error

   - Field email was removed from object type User

ℹ Detected 4 changes

   Breaking changes:
   - Field email was removed from object type User
   Safe changes:
   - Enum value VIEWER was added to enum UserRole
   - Field address was added to object type User
   - Field User.role changed type from UserRole to UserRole!

View full report:
http://__PATH__
`;

exports[`projectType: 'STITCHING' | model: 'legacy' | json: false > can publish and check a schema with target:registry:read access > schemaCheck (breaking) 1`] = `
:::::::::::::::: CLI FAILURE OUTPUT :::::::::::::::
exitCode------------------------------------------:
1
stderr--------------------------------------------:
__NONE__
stdout--------------------------------------------:
✖ Detected 1 error

   - Field email was removed from object type User

ℹ Detected 1 change

   Breaking changes:
   - Field email was removed from object type User

View full report:
http://__PATH__
`;

exports[`projectType: 'STITCHING' | model: 'legacy' | json: false > can publish and check a schema with target:registry:read access > schemaCheck (non-breaking) 1`] = `
:::::::::::::::: CLI SUCCESS OUTPUT :::::::::::::::::

stdout--------------------------------------------:
ℹ Detected 1 change

   Safe changes:
   - Field nickname was added to object type User

View full report:
http://__PATH__
`;

exports[`projectType: 'STITCHING' | model: 'legacy' | json: false > can publish and check a schema with target:registry:read access > schemaPublish 1`] = `
:::::::::::::::: CLI SUCCESS OUTPUT :::::::::::::::::

stdout--------------------------------------------:
✔ Published initial schema.
ℹ Available at http://__PATH__
`;

exports[`projectType: 'STITCHING' | model: 'legacy' | json: false > can update the service url and show it in comparison query > schemaPublish 1`] = `
:::::::::::::::: CLI SUCCESS OUTPUT :::::::::::::::::

stdout--------------------------------------------:
✔ Published initial schema.
ℹ Available at http://__PATH__
`;

exports[`projectType: 'STITCHING' | model: 'legacy' | json: false > can update the service url and show it in comparison query > schemaPublish 2`] = `
:::::::::::::::: CLI SUCCESS OUTPUT :::::::::::::::::

stdout--------------------------------------------:
✔ New service url: http://__PATH__ (previously: http://__PATH__ Available at http://__PATH__
`;

exports[`projectType: 'STITCHING' | model: 'legacy' | json: false > publishing invalid schema SDL provides meaningful feedback for the user. > schemaPublish 1`] = `
:::::::::::::::: CLI FAILURE OUTPUT :::::::::::::::
exitCode------------------------------------------:
2
stderr--------------------------------------------:
    Error: The SDL is not valid at line 1, column 1:
     Syntax Error: Unexpected Name "iliketurtles".
stdout--------------------------------------------:
✖ Failed to publish schema
`;

exports[`projectType: 'STITCHING' | model: 'legacy' | json: false > schema:check should notify user when registry is empty > schemaCheck 1`] = `
:::::::::::::::: CLI SUCCESS OUTPUT :::::::::::::::::

stdout--------------------------------------------:
✔ Schema registry is empty, nothing to compare your schema with.
View full report:
http://__PATH__
`;

exports[`projectType: 'STITCHING' | model: 'legacy' | json: false > schema:check should throw on corrupted schema > schemaCheck 1`] = `
:::::::::::::::: CLI FAILURE OUTPUT :::::::::::::::
exitCode------------------------------------------:
1
stderr--------------------------------------------:
__NONE__
stdout--------------------------------------------:
✖ Detected 3 errors

   - Unknown type User.
   - Unknown type: User.
   - Error: Unknown type: User.

View full report:
http://__PATH__
`;

exports[`projectType: 'STITCHING' | model: 'legacy' | json: false > schema:publish should see Invalid Token error when token is invalid > schemaPublish 1`] = `
:::::::::::::::: CLI FAILURE OUTPUT :::::::::::::::
exitCode------------------------------------------:
2
stderr--------------------------------------------:
 ›   Error: Invalid token provided
 ›   Reference: __ID__
stdout--------------------------------------------:
✖ Failed to publish schema
`;

exports[`projectType: 'STITCHING' | model: 'modern' | json: false > can publish a schema with breaking, warning and safe changes > SchemaPublish 1`] = `
:::::::::::::::: CLI SUCCESS OUTPUT :::::::::::::::::

stdout--------------------------------------------:
✔ Published initial schema.
ℹ Available at http://__PATH__
`;

exports[`projectType: 'STITCHING' | model: 'modern' | json: false > can publish a schema with breaking, warning and safe changes > schemaCheck 1`] = `
:::::::::::::::: CLI FAILURE OUTPUT :::::::::::::::
exitCode------------------------------------------:
1
stderr--------------------------------------------:
__NONE__
stdout--------------------------------------------:
✖ Detected 1 error

   - Field email was removed from object type User

ℹ Detected 4 changes

   Breaking changes:
   - Field email was removed from object type User
   Safe changes:
   - Enum value VIEWER was added to enum UserRole
   - Field address was added to object type User
   - Field User.role changed type from UserRole to UserRole!

View full report:
http://__PATH__
`;

exports[`projectType: 'STITCHING' | model: 'modern' | json: false > can publish and check a schema with target:registry:read access > schemaCheck (breaking) 1`] = `
:::::::::::::::: CLI FAILURE OUTPUT :::::::::::::::
exitCode------------------------------------------:
1
stderr--------------------------------------------:
__NONE__
stdout--------------------------------------------:
✖ Detected 1 error

   - Field email was removed from object type User

ℹ Detected 1 change

   Breaking changes:
   - Field email was removed from object type User

View full report:
http://__PATH__
`;

exports[`projectType: 'STITCHING' | model: 'modern' | json: false > can publish and check a schema with target:registry:read access > schemaCheck (non-breaking) 1`] = `
:::::::::::::::: CLI SUCCESS OUTPUT :::::::::::::::::

stdout--------------------------------------------:
ℹ Detected 1 change

   Safe changes:
   - Field nickname was added to object type User

View full report:
http://__PATH__
`;

exports[`projectType: 'STITCHING' | model: 'modern' | json: false > can publish and check a schema with target:registry:read access > schemaPublish 1`] = `
:::::::::::::::: CLI SUCCESS OUTPUT :::::::::::::::::

stdout--------------------------------------------:
✔ Published initial schema.
ℹ Available at http://__PATH__
`;

exports[`projectType: 'STITCHING' | model: 'modern' | json: false > can update the service url and show it in comparison query > schemaPublish 1`] = `
:::::::::::::::: CLI SUCCESS OUTPUT :::::::::::::::::

stdout--------------------------------------------:
✔ Published initial schema.
ℹ Available at http://__PATH__
`;

exports[`projectType: 'STITCHING' | model: 'modern' | json: false > can update the service url and show it in comparison query > schemaPublish 2`] = `
:::::::::::::::: CLI SUCCESS OUTPUT :::::::::::::::::

stdout--------------------------------------------:
✔ New service url: http://__PATH__ (previously: http://__PATH__ Available at http://__PATH__
`;

exports[`projectType: 'STITCHING' | model: 'modern' | json: false > publishing invalid schema SDL provides meaningful feedback for the user. > schemaPublish 1`] = `
:::::::::::::::: CLI FAILURE OUTPUT :::::::::::::::
exitCode------------------------------------------:
2
stderr--------------------------------------------:
    Error: The SDL is not valid at line 1, column 1:
     Syntax Error: Unexpected Name "iliketurtles".
stdout--------------------------------------------:
✖ Failed to publish schema
`;

exports[`projectType: 'STITCHING' | model: 'modern' | json: false > schema:check should notify user when registry is empty > schemaCheck 1`] = `
:::::::::::::::: CLI SUCCESS OUTPUT :::::::::::::::::

stdout--------------------------------------------:
✔ Schema registry is empty, nothing to compare your schema with.
View full report:
http://__PATH__
`;

exports[`projectType: 'STITCHING' | model: 'modern' | json: false > schema:check should throw on corrupted schema > schemaCheck 1`] = `
:::::::::::::::: CLI FAILURE OUTPUT :::::::::::::::
exitCode------------------------------------------:
1
stderr--------------------------------------------:
__NONE__
stdout--------------------------------------------:
✖ Detected 3 errors

   - Unknown type User.
   - Unknown type: User.
   - Unknown type: User.

View full report:
http://__PATH__
`;

exports[`projectType: 'STITCHING' | model: 'modern' | json: false > schema:publish should see Invalid Token error when token is invalid > schemaPublish 1`] = `
:::::::::::::::: CLI FAILURE OUTPUT :::::::::::::::
exitCode------------------------------------------:
2
stderr--------------------------------------------:
 ›   Error: Invalid token provided
 ›   Reference: __ID__
stdout--------------------------------------------:
✖ Failed to publish schema
`;
